--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,7 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~5.4.2",
+    "firebase-admin": "^5.5.0",
     "firebase-functions": "^0.7.1"
   },
   "private": true
