--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chokidar": "^1.7.0",
     "minimist": "^1.2.0",
     "react": "^16.1.0",
-    "react-dom": "^16.1.0"
+    "react-dom": "^16.1.0",
+    "react-quill": "^1.1.0"
   }
 }
