--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "firebase": "^4.6.2",
     "minimist": "^1.2.0",
     "react": "^16.1.0",
-    "react-dom": "^16.1.0"
+    "react-dom": "^16.1.0",
+    "webpack": "^3.8.1"
   }
 }
