db firebase setup with methods poking around

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@ functions/node_modules
 # Compilation artifacts
 public/bundle.js
 public/bundle.js.map
-public/app.js
+public/secrets.js
 
 functions/lib.js
