--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "firebase": "^4.6.2",
     "immutable": "^3.8.2",
     "minimist": "^1.2.0",
+    "quill": "^1.3.4",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-quill": "^1.1.0",
