--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
     "react-quill": "^1.1.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "webpack": "^3.8.1"
   }
 }
