--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "minimist": "^1.2.0",
     "quill": "^1.3.4",
     "react": "^16.1.0",
-    "react-dom": "^16.1.0",
+    "react-dom": "^16.1.1",
     "react-quill": "^1.1.0",
+    "react-responsive-carousel": "^3.1.28",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
