--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "raw-loader": "^0.5.1",
     "react": "^16.1.0",
     "react-dom": "^16.1.1",
+    "react-entypo": "^1.3.0",
     "react-quill": "^1.1.0",
     "react-responsive-carousel": "^3.1.28",
     "react-router-dom": "^4.2.2",
