--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "immutable": "^3.8.2",
     "minimist": "^1.2.0",
     "quill": "^1.3.4",
+    "quill-delta": "^3.6.2",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-quill": "^1.1.0",
