--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "firebase": "^4.6.2",
     "immutable": "^3.8.2",
     "minimist": "^1.2.0",
+    "node-sass": "^4.7.2",
     "quill": "^1.3.4",
     "quill-delta": "^3.6.2",
     "raw-loader": "^0.5.1",
