--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "cd functions && npm install",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node dev",
     "build": "webpack -p",
     "watch-lib": "npm run build-lib -- -w",
@@ -25,11 +25,15 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "chai": "^4.1.2",
     "firebase-tools": "^3.14.0",
+    "jest": "^21.2.1",
+    "mocha": "^4.0.1",
     "react-hot-loader": "^3.1.2",
     "through2": "^2.0.3",
     "webpack": "^3.8.1",
