--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest": "^21.2.1",
     "mocha": "^4.0.1",
     "react-hot-loader": "^3.1.2",
+    "regenerator-runtime": "^0.11.1",
     "through2": "^2.0.3",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4",
